--- a/test-database.html
+++ b/test-database.html
@@ -43,7 +43,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script>
         // 🔑 REMPLACEZ CES VALEURS PAR LES VÔTRES
-        const SUPABASE_URL = 'https://supabase.com/dashboard/project/jkaffpgqbyhuihvyvtld'
+        const SUPABASE_URL = 'https://jkaffpgqbyhuihvyvtld.supabase.co'
         const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImprYWZmcGdxYnlodWlodnl2dGxkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTE2NTgzOTQsImV4cCI6MjA2NzIzNDM5NH0.OIjoz6uoPV25Nraral4YN_gz7q6COBW3dAVIYhBy1pI'
         
         // Initialiser Supabase
