--- a/catalogue.html
+++ b/catalogue.html
@@ -142,7 +142,7 @@
             <p>Découvrez notre sélection de matières premières pharmaceutiques</p>
             
             <div class="search-bar">
-                <input type="text" id="searchInput" placeholder="Rechercher par nom, CAS, catégorie...">
+                <input type="text" id="searchInput" placeholder="Rechercher par nom, CAS, catégorie, fabricant...">
                 <button onclick="search()"><i class="fas fa-search"></i></button>
             </div>
         </div>
