--- a/catalogue.html
+++ b/catalogue.html
@@ -180,7 +180,7 @@
                     </div>
                     
                     <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; margin-bottom: 1rem;">
-                        <div style="display: grid; gap: 0.5rem; font-size: 0.9rem;">
+                        <div style="display: grid; gap: 0.5rem; font-size: 0.9rem; color: #000;">
                             <div><strong>Nom chimique:</strong> ${exc.nom_chimique || 'N/A'}</div>
                             <div><strong>CAS:</strong> ${exc.cas_number || 'N/A'}</div>
                             <div><strong>Formule:</strong> ${exc.formule || 'N/A'}</div>
