--- a/catalogue.html
+++ b/catalogue.html
@@ -187,7 +187,7 @@
                         </div>
                     </div>
                     
-                    <div style="font-size: 0.9rem; color: var(--text-light); margin-bottom: 1rem; line-height: 1.5;">
+                    <div style="font-size: 0.9rem; color: #000 ; margin-bottom: 1rem; line-height: 1.5;">
                         <strong>Fonction:</strong> ${exc.fonction_principale || 'Non spécifiée'}
                     </div>
                     
