--- a/produit-detail.html
+++ b/produit-detail.html
@@ -112,12 +112,12 @@
         }
 
         .tab-content {
-            display: none;
+            display: none; color: #000;
         }
 
         .tab-content.active {
             display: block;
-            animation: fadeIn 0.3s;
+            animation: fadeIn 0.3s; color: #000;
         }
 
         @keyframes fadeIn {
@@ -129,14 +129,14 @@
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             gap: 1.5rem;
-            margin-bottom: 2rem;
+            margin-bottom: 2rem; color: #000;
         }
 
         .info-card {
             background: #f8f9fa;
             padding: 1.5rem;
             border-radius: 8px;
-            border-left: 4px solid #667eea;
+            border-left: 4px solid #667eea; color: #000;
         }
 
         .info-card h3 {
@@ -144,13 +144,13 @@
             color: #000;
             font-size: 0.9rem;
             text-transform: uppercase;
-            letter-spacing: 0.5px;
+            letter-spacing: 0.5px; color: #000;
         }
 
         .info-card p {
             margin: 0;
             color: #000;
-            font-size: 1.1rem;
+            font-size: 1.1rem; color: #000;
         }
 
         .info-card code {
@@ -158,7 +158,7 @@
             padding: 0.2rem 0.5rem;
             border-radius: 4px;
             font-family: 'Courier New', monospace;
-            font-size: 0.95rem;
+            font-size: 0.95rem; color: #000;
         }
 
         .content-section {
@@ -242,13 +242,13 @@
             padding: 1.5rem;
             border-radius: 8px;
             margin: 1rem 0;
-            overflow-x: auto;
+            overflow-x: auto; color: #000;
         }
 
         .chemical-structure code {
             font-family: 'Courier New', monospace;
             font-size: 0.9rem;
-            word-break: break-all;
+            word-break: break-all; color: #000;
         }
     </style>
 </head>
